--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc --skipLibCheck && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -20,6 +20,9 @@
     "react-markdown": "^9.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "rehype": "^13.0.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-react": "^8.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
